# Cascabel

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.frontend  README.md  docker-compose.yml  execute_simulation.py  pyproject.toml  requirements.txt
.github/chatmodes/: analyze-product.chatmode.md  create-spec.chatmode.md
.github/instructions/: develop-feature.instructions.md
.ipynb_checkpoints/: single_lane_path-checkpoint.ipynb
api/: main.py  shared.py
api/routers/: simulations.py
cascabel/models/: border_crossing.py  car.py  crossing.py  models.py  queue.py  simulation.py  wait_line.py  waitline.py
cascabel/models/queuing/: arrival_process.py  mm1_queue.py  (+1 more)
cascabel/simulation/: csv_generator.py
cascabel/tests/: test_bounding_validator.py  test_geojson_loader.py  test_simulation_bounds.py  test_waitline.py
cascabel/utils/: bounding_validator.py  data_ingestion.py  geojson_loader.py  rss_feed.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx  index.tsx  setupTests.ts
notebooks/: 01_Introduction_to_Cascabel.ipynb  02_Getting_Started.ipynb  03_Running_Simulations_in_Python.ipynb  04_Visualizing_Simulation_Results.ipynb  05_Telemetry_Analysis.ipynb  06_Experimenting_with_Parameters.ipynb  07_Advanced_Customization.ipynb  Untitled.ipynb  single_lane_path.ipynb
raw_data/: 2016-07-07_14-24-46.csv  2016-07-07_14-55-24.csv  2017-05-14_22-05-01.csv  my_iOS_device_2017-12-07_21-15-23_-0700.csv
tests/: test_api.py  test_physics.py  test_queuing.py  test_simulation.py
(+30 files in other folders)
